# accmsc

./: README.md  main.py  pyproject.toml
conf/: config.yaml  instructions.md
conf/classification_dataset/: newcastle.yaml
conf/classifier/dataset/: applewatch.yaml  conventions.md  geneactiv.yaml  newcastle.yaml
conf/classifier/label_transform/: collapse.yaml  identity.yaml
conf/classifier/ml_config/: default.yaml  five_fold.yaml  not_frozen.yaml
conf/classifier/network/: asleep_lstm.yaml  lstm.yaml  naive_mlp.yaml  naive_mlp_small.yaml
conf/dataset/: applewatch.yaml  capture24.yaml  geneactiv.yaml  newcastle.yaml
conf/feature_extractor/augmentations/: best_bsc.yaml  harnet.yaml  readme_augs.md
conf/feature_extractor/dataset/: capture24.yaml
conf/feature_extractor/ml_config/: default.yaml
conf/ssl_dataset/: capture24.yaml
src/data_download/: __init__.py  data_download.py  data_preprocess.py  data_unpack.py
src/data_preprocessing/: __init__.py  data_preprocessing.py
src/models/: __init__.py  lstm.py  ntxent_loss.py  resnet.py  resnet1d.py  rnn.py  simclr.py
src/torch_datasets/: __init__.py  acc_dataset.py  list_dataset.py  precomputed_features_dataset.py  raw_acc_dataset.py  rnn_dataset.py  ssl_augmentation_lazy_dataset.py  ssl_combined_dataset.py  ssl_raw_dataset.py
src/train_classifier/: __init__.py  classifier_models.py  run_classification.py  train_classifier.py
src/train_ssl/: __init__.py  get_backbone_network.py  run_ssl.py  ssl_augmentations.py  ssl_models.py  train_ssl.py
src/utils/: __init__.py  torch_utils.py  train_utils.py
(+5 files in other folders)
